--- a/cmd/generator/templates/gnomockd/preset_test.go.template
+++ b/cmd/generator/templates/gnomockd/preset_test.go.template
@@ -9,9 +9,9 @@ import (
 	"os"
 	"testing"
 
-	"github.com/orlangure/gnomock"
-	"github.com/orlangure/gnomock/internal/gnomockd"
-	_ "github.com/orlangure/gnomock/preset/{{ lower .Name }}"
+	"github.com/johanhugg/gnomock"
+	"github.com/johanhugg/gnomock/internal/gnomockd"
+	_ "github.com/johanhugg/gnomock/preset/{{ lower .Name }}"
 	"github.com/stretchr/testify/require"
 )
 
