--- a/cmd/generator/templates/preset/README.md.template
+++ b/cmd/generator/templates/preset/README.md.template
@@ -1,6 +1,6 @@
 # Gnomock {{ .Name }}
 
-Gnomock {{ .Name }} is a [Gnomock](https://github.com/orlangure/gnomock) preset for
+Gnomock {{ .Name }} is a [Gnomock](https://github.com/johanhugg/gnomock) preset for
 running tests against a real {{ .Name }} container, without mocks.
 
 ```go
