--- a/cmd/generator/templates/preset/preset.go.template
+++ b/cmd/generator/templates/preset/preset.go.template
@@ -7,9 +7,9 @@ import (
 	"context"
 	"fmt"
 
-	"github.com/orlangure/gnomock"
+	"github.com/johanhugg/gnomock"
 	{{ if .Public -}}
-	"github.com/orlangure/gnomock/internal/registry"
+	"github.com/johanhugg/gnomock/internal/registry"
 	{{- end}}
 )
 
