--- a/cmd/generator/templates/preset/preset_test.go.template
+++ b/cmd/generator/templates/preset/preset_test.go.template
@@ -3,8 +3,8 @@ package {{ lower .Name }}_test
 import (
 	"testing"
 
-	"github.com/orlangure/gnomock"
-	"github.com/orlangure/gnomock/preset/{{ lower .Name }}"
+	"github.com/johanhugg/gnomock"
+	"github.com/johanhugg/gnomock/preset/{{ lower .Name }}"
 	"github.com/stretchr/testify/require"
 )
 
